@@ -14,64 +14,40 @@
  See the License for the specific language governing permissions and
  limitations under the License.
 -->
-# Building Log4j 2
-  
-To build Log4j 2, you need a JDK implementation version 1.7 or greater, JDK 
-version 9, and Apache Maven 3.x.
 
-Log4j 2.x uses the Java 9 compiler in addition to 
-the Java version installed in the path. This is accomplished by using Maven's toolchains support.
-Log4j 2 provides sample toolchains XML files in the root folder. This may be used by 
-modifying it and installing the file as toolchains.xml in the .m2 folder or by using the 
-following when invoking Maven.
+# Requirements
 
-```
-[Macintosh] -t ./toolchains-sample-mac.xml 
-[Windows] -t ./toolchains-sample-win.xml 
-[Linux] -t ./toolchains-sample-linux.xml 
-```
+* JDK 11
+* Apache Maven 3.x
+* A modern Linux, OSX, or Windows host
 
-To perform the license release audit, a.k.a. "RAT check", run.
+<a name="building"></a>
+# Building the sources
 
-    mvn apache-rat:check
+You can build and verify the sources as follows:
 
-To build the site with Java 7, make sure you give Maven enough memory using 
-`MAVEN_OPTS` with options appropriate for your JVM. Alternatively, you can 
-build with Java 8 and not deal with `MAVEN_OPTS`. 
+    ./mvnw verify
 
-To install the jars in your local Maven repository, from a command line, run:
+`verify` goal runs validation and test steps next to building (i.e., compiling) the sources.
+To speed up the build, you can skip verification:
 
-    mvn clean install
+    ./mvnw -DskipTests package
 
-Once install is run, you can run the Clirr check on the API and 1.2 API modules:
+If you want to install generated artifacts to your local Maven repository, replace above `verify` and/or `package` goals with `install`.
 
-    mvn clirr:check -pl log4j-api
+<a name="dns"></a>
+## DNS lookups in tests
 
-    mvn clirr:check -pl log4j-1.2-api
+Note that if your `/etc/hosts` file does not include an entry for your computer's hostname, then
+many unit tests may execute slow due to DNS lookups to translate your hostname to an IP address in
+[`InetAddress.getLocalHost()`](http://docs.oracle.com/javase/7/docs/api/java/net/InetAddress.html#getLocalHost()).
+To remedy this, you can execute the following:
 
-Next, to build the site:
+    printf '127.0.0.1 %s\n::1 %s\n' `hostname` `hostname` | sudo tee -a /etc/hosts
 
-If Java 7 runs out of memory building the site, you will need:
+<a name="website"></a>
+# Building the website and manual
 
-    set MAVEN_OPTS=-Xmx2000m -XX:MaxPermSize=384m
+You can build the website and manual as follows:
 
-    mvn site
-
-On Windows, use a local staging directory, for example:
-
-    mvn site:stage-deploy -DstagingSiteURL=file:///%HOMEDRIVE%%HOMEPATH%/log4j
-
-On UNIX, use a local staging directory, for example:
-
-    mvn site:stage-deploy -DstagingSiteURL=file:///$HOME/log4j
-
-To test, run:
-
-    mvn clean install
-
-## Testing in Docker
-
-In order to run a clean test using the minimum version of the JDK along with a
-proper Linux environment, run:
-
-    docker build .
+    ./mvnw --non-recursive -Dmaven.doap.skip -DskipTests site
